--- a/wqredisclient/App.xaml
+++ b/wqredisclient/App.xaml
@@ -8,6 +8,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="theme/SvgSource.xaml" />
                 <ResourceDictionary Source="language/en_US.xaml" />
+                <ResourceDictionary Source="theme/light/Resources.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
