--- a/wqredisclient/theme/light/Base.xaml
+++ b/wqredisclient/theme/light/Base.xaml
@@ -1,12 +1,17 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:wqredisclient.theme.light">
-    <Color x:Key="primaryColor" A="255" R="96" G="104" B="251" />    
+    <Color x:Key="primaryColor" A="255" R="96" G="104" B="251" />
+    <Color x:Key="darkBackgroundColor" A="255" R="247" G="249" B="252" />
     <Color x:Key="textNormalColor" A="255" R="51" G="51" B="51" />
     <Color x:Key="textLightColor" A="255" R="229" G="230" B="246" />
+    
     <SolidColorBrush x:Key="primaryBrush" Color="{StaticResource primaryColor}" />
+    <SolidColorBrush x:Key="disableBrush" Color="#dddddd" />
+    <SolidColorBrush x:Key="drakBrush" Color="#cccccc" />
     <SolidColorBrush x:Key="primaryAlpha1Brush" Color="{StaticResource primaryColor}" Opacity="0.05" />
     <SolidColorBrush x:Key="primaryAlpha2Brush" Color="{StaticResource primaryColor}" Opacity="0.3" />
     <SolidColorBrush x:Key="textNormalBrush" Color="{StaticResource textNormalColor}" />
     <SolidColorBrush x:Key="textLightBrush" Color="{StaticResource textLightColor}" />
+    <SolidColorBrush x:Key="darkBackgroundBrush" Color="{StaticResource darkBackgroundColor}" />
 </ResourceDictionary>
