--- a/wqredisclient/theme/light/Resources.xaml
+++ b/wqredisclient/theme/light/Resources.xaml
@@ -212,19 +212,19 @@
                             <Setter TargetName="PART_Header" Property="MinHeight" Value="19"/>
                         </MultiTrigger>
                         <Trigger Property="IsSelected" Value="true">
-                            <Setter TargetName="Bd" Property="Background" Value="#f7f9fc" />
-                            <Setter Property="Foreground" Value="Black" />
+                            <Setter TargetName="Bd" Property="Background" Value="{DynamicResource darkBackgroundBrush}" />
+                            <Setter Property="Foreground" Value="{DynamicResource primaryBrush}" />
                         </Trigger>
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
                                 <Condition Property="IsSelected" Value="true"/>
                                 <Condition Property="IsSelectionActive" Value="false"/>
                             </MultiTrigger.Conditions>
-                            <Setter TargetName="Bd" Property="Background" Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"/>
-                            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
+                            <Setter TargetName="Bd" Property="Background" Value="{DynamicResource darkBackgroundBrush}" />
+                            <Setter Property="Foreground" Value="{DynamicResource primaryBrush}" />
                         </MultiTrigger>
                         <Trigger Property="IsEnabled" Value="false">
-                            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+                            <Setter Property="Opacity" Value="0.5"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
