--- a/wqredisclient/theme/light/Base.xaml
+++ b/wqredisclient/theme/light/Base.xaml
@@ -3,15 +3,19 @@
                     xmlns:local="clr-namespace:wqredisclient.theme.light">
     <Color x:Key="primaryColor" A="255" R="96" G="104" B="251" />
     <Color x:Key="darkBackgroundColor" A="255" R="247" G="249" B="252" />
+    <Color x:Key="lightBackgroundColor" A="255" R="238" G="242" B="248" />
     <Color x:Key="textNormalColor" A="255" R="51" G="51" B="51" />
     <Color x:Key="textLightColor" A="255" R="229" G="230" B="246" />
     
     <SolidColorBrush x:Key="primaryBrush" Color="{StaticResource primaryColor}" />
     <SolidColorBrush x:Key="disableBrush" Color="#dddddd" />
     <SolidColorBrush x:Key="drakBrush" Color="#cccccc" />
+    <SolidColorBrush x:Key="icoNormalBrush" Color="#bbbbbb" />
+    <SolidColorBrush x:Key="icoLightBrush" Color="#666666" />
     <SolidColorBrush x:Key="primaryAlpha1Brush" Color="{StaticResource primaryColor}" Opacity="0.05" />
     <SolidColorBrush x:Key="primaryAlpha2Brush" Color="{StaticResource primaryColor}" Opacity="0.3" />
     <SolidColorBrush x:Key="textNormalBrush" Color="{StaticResource textNormalColor}" />
     <SolidColorBrush x:Key="textLightBrush" Color="{StaticResource textLightColor}" />
     <SolidColorBrush x:Key="darkBackgroundBrush" Color="{StaticResource darkBackgroundColor}" />
+    <SolidColorBrush x:Key="lightBackgroundBrush" Color="{StaticResource lightBackgroundColor}" />
 </ResourceDictionary>
